testsuite/tests/parser/should_fail/ParserNoForallUnicode.hs
{-# LANGUAGE Haskell2010 #-}
{-# LANGUAGE UnicodeSyntax #-}

module ParserNoForallUnicode where

id' :: ∀ a . a → a
id' a = a
