testsuite/tests/parser/should_fail/ParserNoForallUnicode.stderr

ParserNoForallUnicode.hs:6:8: error:
    Illegal symbol ‘∀’ in type
    Suggested fix:
      Perhaps you intended to use RankNTypes
      or a similar language extension to enable explicit-forall syntax: ∀ <tvs>. <type>
